Add support for SET in templates2ada. Set variables with SET_ prefix are now exported. Update a non regression test to test this feature. Work for FC04-011.

--- a/regtests/tpl2.tmpl
+++ b/regtests/tpl2.tmpl
@@ -1,7 +1,8 @@
 
 @@-- HTTP_GET(HPAR)
 
-@@SET@ VAR = 19
+@@SET@@ VAR = 19
+@@SET@@ SET_VAR = azerty
 
 @_NAME_@
 @_UPPER:TODO_@
@@ -10,5 +11,7 @@
 name="PN_@_N1_@">
 <form
 name="N2">
+
+<p>@_SET_VAR_@</p>
 
 @_LAZY_BLOCK_@
